--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div>
 				<br />
 				<h3>Supported Parameters</h3>
-				<p>These are standard URL parameters. They will define the initial state of the source once it's in OBS. You can then customize them as normal.</p>
+				<p>These are standard URL parameters. They will define the initial state of the source once it's in OBS. You can then customize it as normal.</p>
 				<table class="table">
 					<thead>
 						<tr>
@@ -65,7 +65,7 @@
 				<br />
 				<h3>For Web Developers</h3>
 				<p>There are a few ways you can use this on your website.</p>
-				<p>The most basic method is a simple anchor (<code>&lt;a href=""&gt;</code>). The user drags the link into OBS, and OBS will parse the URL & parameters. Browser compatibility in this area is not perfect.</p>
+				<p>The most basic method is a simple anchor (<code>&lt;a href=""&gt;</code>). The user drags the link into OBS, and OBS will parse the URL & parameters. Browser compatibility in this area is not perfect, but this means that existing links and buttons can be dragged into OBS without modification.</p>
 				<p><strong>Recommended: </strong>For an advanced, fancy design, you want to use the <a href="https://developer.mozilla.org/en-US/docs/Web/API/DataTransfer">DataTransfer API.</a> Specifically, the <code>dragstart</code> event. Example code below:</p>
 				<p><pre><code>
 	let dragged;
